some update abt service management